# eos

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
.github/: REPOSITORY.md  dependabot.yml  pull_request_template.md
deploy/: Caddyfile  backup.sh  cloudflared-eos.example.yml  cloudflared-flow-merged.yml  cron-backup.sh  dogfood.sh  env.production.example  eos-user.service  eos.logrotate  eos.service  install-user.sh  install.sh  nginx-eos.conf
docs/: AI_AGENTS.md  DEPLOY.md  MICROSAAS_LOOP.md  SCALE.md  STRIPE_TEST.md  WORKLOG.md
eos/: __init__.py  admin_oauth.py  api_tokens.py  appointments.py  automations.py  billing_gate.py  bootstrap.py  brand_kits.py  brokerage.py  brokerage_portal.py  bundles.py  calendar_view.py  churn.py  clients.py  commerce.py  config.py  contracts.py  credits.py  db.py  delivery_notify.py  demo_sandbox.py  dogfood.py  domain_verify.py  drive_time.py  emails.py  galleries.py  imaging.py  inquiries.py  integration_events.py  invites.py  invoices.py  jobs.py  listing_media.py  listings.py  mailer.py  main.py  marketing_graphics.py  marketing_kit.py  media_paths.py  microsites.py  (+41 more)
scripts/: check-env.py  check-stripe-env.py  dev.sh  migrate.py
static/: calendar.js  eos.css
templates/: base.html
tests/: conftest.py  test_dogfood.py  test_foundation.py  test_phase10.py  test_phase11.py  test_phase13.py  test_phase14.py  test_phase15.py  test_phase16.py  test_phase17.py  test_phase18.py  (+12 more)
(+108 files in other folders)
