[project]
name = "eos"
version = "1.7.0"
description = "Multi-tenant SaaS for real estate photography studios — Aryeo-class alternative"
requires-python = ">=3.12"
readme = "README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["eos", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B904", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B008", "F841"]

[tool.coverage.run]
source = ["eos"]
omit = ["eos/migrations/*"]

[tool.coverage.report]
fail_under = 55
show_missing = true
skip_empty = true